fix overflow, shrinks

--- a/src/screen/HomeScreen/HomeScreen.module.css
+++ b/src/screen/HomeScreen/HomeScreen.module.css
@@ -37,6 +37,7 @@
 
 .channelImg {
   display: block;
+  flex-shrink: 0;
   width: 32px;
   height: 32px;
   background-color: gray;
@@ -48,6 +49,7 @@
   }
 
   .hiddenText {
+    overflow: hidden;
     width: 0;
     height: 10px;
     opacity: 0;
