--- a/src/screen/VideoScreen/VideoScreen.module.css
+++ b/src/screen/VideoScreen/VideoScreen.module.css
@@ -32,6 +32,7 @@
 
 .channelImg {
   display: block;
+  flex-shrink: 0;
   width: 32px;
   height: 32px;
   background-color: gray;
@@ -43,6 +44,7 @@
   }
 
   .hiddenText {
+    overflow: hidden;
     width: 0;
     height: 10px;
     opacity: 0;
